--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,10 @@ android {
 
 dependencies {
 
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0' //implementation of gson for automatic http request handling
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0' // implementation fo retrofit for api calling
+    implementation 'com.squareup.picasso:picasso:2.8' // for caching and loading images
+
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
