--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -30,8 +31,8 @@ android {
 
 dependencies {
 
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0' //implementation of gson for automatic http request handling
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0' // implementation of retrofit for api calling
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.picasso:picasso:2.8' // for caching and loading images
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -42,6 +43,7 @@ dependencies {
         exclude group: 'androidx.lifecycle', module:'lifecycle-viewmodel'
         exclude group: 'androidx.lifecycle', module:'lifecycle-viewmodel-ktx'
     }
+    implementation 'com.google.firebase:firebase-auth:21.0.2'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
